# lineageresolver

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: ARCHITECTURE.md  CONFIG_SPEC.md  DEVELOPMENT_WORKFLOW.md  FILE_STRUCTURE.md  PROJECT_PLAN.md  SOFTWARE_SPEC.md
docs/tickets/: IMPL_0_EXECUTION.md  PM_0_KICKOFF.md  TICKET_00_repo_scaffold.md  (+11 more)
examples/: scanpy_notebook.ipynb
lineageresolver/: __init__.py  ambient.py  api.py  cli.py  config.py  evidence.py  io.py  metrics.py  model.py  modules.py  plotting.py
tests/: helpers.py  make_test_data.py  test_abstention_threshold_behavior.py  test_ambient_empty_selection_rules.py  test_ambient_fraction_normalization.py  test_ambient_raw10x_fixture_estimation.py  test_api_infer_signature.py  test_candidate_set_selection.py  test_cli_estimate_ambient_smoke.py  test_cli_infer_smoke.py  test_cli_report_smoke.py  test_cli_smoke.py  test_evidence_barcode_alignment.py  test_fallback_mode_flag_written.py  test_fallback_output_schema.py  test_fallback_trigger_without_raw10x.py  test_imports.py  test_infer_candidate_subset_alignment.py  test_infer_e2e_fallback_path.py  test_infer_e2e_raw10x_path.py  test_infer_missing_evidence_rows_fixture.py  test_metrics_ece_brier.py  test_metrics_error_coverage.py  test_missing_evidence_defaults.py  test_module_missing_gene_handling.py  test_module_scoring_weighted_toy.py  test_module_sparse_input.py  test_placeholder_output_columns.py  test_plotting_smoke.py  test_softmax_numerical_stability.py  test_softmax_probability_normalization.py  test_tcr_feature_derivation.py
(+4 files in other folders)
